k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-service
spec:
  type: LoadBalancer
  selector:
    app: go-web-app
  ports:
    - protocol: TCP
      port: 4040
      targetPort: 8080
