k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-app-service
            port:
              number: 4040

---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-wildcard-host
# spec:
#   rules:
#   - host: "foo.bar.com"
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/bar"
#         backend:
#           service:
#             name: service1
#             port:
#               number: 80
#   - host: "*.foo.com"
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/foo"
#         backend:
#           service:
#             name: service2
#             port:
#               number: 80
